# repo-ctx

./: README.md  pyproject.toml
src/repo_ctx/: __init__.py  __main__.py  cli.py  exceptions.py
src/repo_ctx/adapters/: __init__.py  claude_code.py
src/repo_ctx/core/: __init__.py  adapter.py  engine.py  manifest.py  merger.py  profile.py  registry.py
standards/commands/: ci-kaniko.md
standards/context/: gitlab-ce-conventions.md
standards/profiles/microservice/: profile.json
tests/: test_init_sync_idempotency.py  test_manifest.py  test_mcp.py  test_merger.py  test_profile.py  test_registry.py
