[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-ctx"
version = "0.1.0"
description = "CLI for deploying AI development standards across git repositories"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
repo-ctx = "repo_ctx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
